# push_swap

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  moulinette.sh  tester.py
.github/workflows/: macos-build.yml  norminette.yml  test_instructions.yml  ubuntu-build.yml
algo/: main.c  operations.c  operations.h  push_swap.h  stack.c  stack.h  utils.c  utils.h
include/: checker.h  chunk.h  opcode.h  operations.h  push_swap.h  solver.h  stack.h  utils.h
include/include/: checker.h  operations.h  push_swap.h  solver.h  stack.h  utils.h
includes/: operations.h  push_swap.h  solver.h  stack.h  utils.h
src/: main.c  parsing.c  stack.c  utils.c
src/checker/: checker.c
src/chunk/: chunk.c  chunk_size.c
src/operations/: operations.c  push.c  reverse_rotate.c  rotate.c  swap.c
src/solver/: bogosort.c  chunk_sort.c  insertion_sort.c  main.c  optimization.c  push_chunks_back_to_a.c  push_chunks_to_b.c  radix_sort.c  set_sorted_pos.c  smol_sort.c  solving_utils.c  sort.c  triple_sort.c
src/stack/: print_stacks.c  stack.c  stack_checks.c  stack_operations.c
src/utils/: max_in_stack.c  parsing.c  utils.c
